--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
       </span>
       <li onclick="more_cancel()"><a href="#about">MORE <i class="fas fa-caret-down fa-1x icon"></i></a></li>
     </ul>
-    <div id = "social_media">
-      <div class ="icons"><i class="fab fa-youtube"></i></div>
-      <div class ="icons"><i class="fab fa-instagram"></i></div>
+    <div >
+      <div class ="icons social_media"><i class="fab fa-youtube"></i></div>
+      <div class ="icons social_media"><i class="fab fa-instagram"></i></div>
       <div class ="icons"><i class="fab fa-facebook"></i></div>
       <div class ="icons"><i class="fab fa-linkedin"></i></div>
       <div class ="icons"><i class="fab fa-twitter"></i></div>
