--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class ="icons social_media"><i class="fab fa-instagram"></i></div>
       <div class ="icons social_media"><i class="fab fa-facebook"></i></div>
       <div class ="icons social_media"><i class="fab fa-linkedin"></i></div>
-      <div class ="icons social_media"><i class="fab fa-twitter"></i></div>
+      <div class ="icons "><i class="fab fa-twitter"></i></div>
     </div>
   </div>
 <!-- Navbar from Header End-->
