--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
       <li onclick="more_cancel()"><a href="#about">MORE <i class="fas fa-caret-down fa-1x icon"></i></a></li>
     </ul>
     <div >
-      <div class ="icons social_media"><i class="fab fa-youtube"></i></div>
-      <div class ="icons social_media"><i class="fab fa-instagram"></i></div>
-      <div class ="icons social_media"><i class="fab fa-facebook"></i></div>
-      <div class ="icons social_media"><i class="fab fa-linkedin"></i></div>
+      <div class ="icons "><i class="fab fa-youtube"></i></div>
+      <div class ="icons "><i class="fab fa-instagram"></i></div>
+      <div class ="icons "><i class="fab fa-facebook"></i></div>
+      <div class ="icons "><i class="fab fa-linkedin"></i></div>
       <div class ="icons "><i class="fab fa-twitter"></i></div>
     </div>
   </div>
